Bug 254892 - REGRESSION(259869@main): [GStreamer][WebCodecs] 2 tests now crashing
Summary: REGRESSION(259869@main): [GStreamer][WebCodecs] 2 tests now crashing
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Philippe Normand
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-02 09:41 PDT by Philippe Normand
Modified: 2023-04-03 00:55 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe Normand 2023-04-02 09:41:27 PDT
imported/w3c/web-platform-tests/webcodecs/videoFrame-canvasImageSource.html

Thread 1 (Thread 0x7f9a28b34ec0 (LWP 673027)):
#0  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44
#1  0x00007f9a2cd001f3 in __pthread_kill_internal (signo=6, threadid=<optimized out>) at pthread_kill.c:78
#2  0x00007f9a2ccae00e in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#3  0x00007f9a2cc977fc in __GI_abort () at abort.c:79
#4  0x00007f9a2cc9771b in __assert_fail_base (fmt=0x7f9a2ce36e50 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x7f9a316c2430 "CAIRO_REFERENCE_COUNT_HAS_REFERENCE (&surface->ref_count)", file=0x7f9a316c22cd "../../src/cairo-surface.c", line=930, function=<optimized out>) at assert.c:92
#5  0x00007f9a2cca6657 in __GI___assert_fail (assertion=assertion@entry=0x7f9a316c2430 "CAIRO_REFERENCE_COUNT_HAS_REFERENCE (&surface->ref_count)", file=file@entry=0x7f9a316c22cd "../../src/cairo-surface.c", line=line@entry=930, function=function@entry=0x7f9a316c2890 <__PRETTY_FUNCTION__.8> "cairo_surface_reference") at assert.c:101
#6  0x00007f9a316497b4 in INT_cairo_surface_reference (surface=<optimized out>) at ../../src/cairo-surface.c:930
#7  INT_cairo_surface_reference (surface=<optimized out>) at ../../src/cairo-surface.c:924
#8  0x00007f9a34542151 in WebCore::VideoFrame::fromNativeImage(WebCore::NativeImage&) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0
#9  0x00007f9a35418a09 in WebCore::WebCodecsVideoFrame::initializeFrameWithResourceAndSize(WebCore::ScriptExecutionContext&, WTF::Ref<WebCore::NativeImage, WTF::RawPtrTraits<WebCore::NativeImage> >&&, WebCore::WebCodecsVideoFrame::Init&&) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0
#10 0x00007f9a3541fa69 in WebCore::WebCodecsVideoFrame::create(WebCore::ScriptExecutionContext&, std::variant<WTF::RefPtr<WebCore::HTMLImageElement, WTF::RawPtrTraits<WebCore::HTMLImageElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLImageElement> >, WTF::RefPtr<WebCore::SVGImageElement, WTF::RawPtrTraits<WebCore::SVGImageElement>, WTF::DefaultRefDerefTraits<WebCore::SVGImageElement> >, WTF::RefPtr<WebCore::HTMLCanvasElement, WTF::RawPtrTraits<WebCore::HTMLCanvasElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLCanvasElement> >, WTF::RefPtr<WebCore::ImageBitmap, WTF::RawPtrTraits<WebCore::ImageBitmap>, WTF::DefaultRefDerefTraits<WebCore::ImageBitmap> >, WTF::RefPtr<WebCore::CSSStyleImageValue, WTF::RawPtrTraits<WebCore::CSSStyleImageValue>, WTF::DefaultRefDerefTraits<WebCore::CSSStyleImageValue> >, WTF::RefPtr<WebCore::OffscreenCanvas, WTF::RawPtrTraits<WebCore::OffscreenCanvas>, WTF::DefaultRefDerefTraits<WebCore::OffscreenCanvas> >, WTF::RefPtr<WebCore::HTMLVideoElement, WTF::RawPtrTraits<WebCore::HTMLVideoElement>, WTF::DefaultRefDerefTraits<WebCore::HTMLVideoElement> > >&&, WebCore::WebCodecsVideoFrame::Init&&) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0
#11 0x00007f9a350380a5 in WebCore::constructJSWebCodecsVideoFrame1(JSC::JSGlobalObject*, JSC::CallFrame*) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0
#12 0x00007f9a350388d3 in WebCore::JSDOMConstructor<WebCore::JSWebCodecsVideoFrame>::construct(JSC::JSGlobalObject*, JSC::CallFrame*) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0
#13 0x00007f99de05c0c7 in  ()
#14 0x00007ffc5040a730 in  ()
#15 0x00007f9a2fde20aa in op_construct_slow_return_location () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0
#16 0x0000000000000000 in  ()

imported/w3c/web-platform-tests/webcodecs/videoFrame-construction.crossOriginSource.sub.html


Thread 1 (Thread 0x7fa3bd0cfec0 (LWP 685986)):
#0  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44
#1  0x00007fa3c129b1f3 in __pthread_kill_internal (signo=6, threadid=<optimized out>) at pthread_kill.c:78
#2  0x00007fa3c124900e in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#3  0x00007fa3c12327fc in __GI_abort () at abort.c:79
#4  0x00007fa3c123271b in __assert_fail_base (fmt=0x7fa3c13d1e50 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x7fa3c5c5d430 "CAIRO_REFERENCE_COUNT_HAS_REFERENCE (&surface->ref_count)", file=0x7fa3c5c5d2cd "../../src/cairo-surface.c", line=955, function=<optimized out>) at assert.c:92
#5  0x00007fa3c1241657 in __GI___assert_fail (assertion=assertion@entry=0x7fa3c5c5d430 "CAIRO_REFERENCE_COUNT_HAS_REFERENCE (&surface->ref_count)", file=file@entry=0x7fa3c5c5d2cd "../../src/cairo-surface.c", line=line@entry=955, function=function@entry=0x7fa3c5c5d870 <__PRETTY_FUNCTION__.9> "cairo_surface_destroy") at assert.c:101
#6  0x00007fa3c5be50c4 in INT_cairo_surface_destroy (surface=0x562b67dc2690) at ../../src/cairo-surface.c:955
#7  0x00007fa3ca914372 in WebCore::NativeImage::~NativeImage() () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0
#8  0x00007fa3ca8f7f85 in WebCore::ImageSource::~ImageSource() () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0
#9  0x00007fa3ca8560be in WebCore::BitmapImage::~BitmapImage() () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0
#10 0x00007fa3ca856139 in WebCore::BitmapImage::~BitmapImage() () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0
#11 0x00007fa3ca5e3565 in WebCore::CachedImage::~CachedImage() () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0
#12 0x00007fa3ca5e3899 in WebCore::CachedImage::~CachedImage() () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0
#13 0x00007fa3ca5f68ad in WebCore::CachedResource::deleteIfPossible() () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0
#14 0x00007fa3ca5f7c50 in WebCore::CachedResource::unregisterHandle(WebCore::CachedResourceHandleBase*) () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0
#15 0x00007fa3ca570c3f in WebCore::ImageLoader::~ImageLoader() () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0
#16 0x00007fa3ca1ad901 in WebCore::HTMLImageElement::~HTMLImageElement() () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0
#17 0x00007fa3ca1adf49 in WebCore::HTMLImageElement::~HTMLImageElement() () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0
#18 0x00007fa3c9f7bb85 in WebCore::Event::~Event() () at /app/webkit/WebKitBuild/Release/lib/libwebkit2gtk-4.1.so.0
#19 0x00007fa3c4e740f1 in JSC::PreciseAllocation::sweep() () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0
#20 0x00007fa3c4e701c0 in JSC::MarkedSpace::sweepPreciseAllocations() () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0
#21 0x00007fa3c4e3a32b in JSC::Heap::finalize() () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0
#22 0x00007fa3c4e3a658 in JSC::Heap::handleNeedFinalize(unsigned int) () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0
#23 0x00007fa3c4e3c9db in JSC::Heap::finishChangingPhase(JSC::GCConductor) () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0
#24 0x00007fa3c4e42dd5 in WTF::ScopedLambdaFunctor<void (JSC::CurrentThreadState&), JSC::Heap::collectInMutatorThread()::{lambda(JSC::CurrentThreadState&)#1}>::implFunction(void*, JSC::CurrentThreadState&) () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0
#25 0x00007fa3c4e696e5 in JSC::callWithCurrentThreadState(WTF::ScopedLambda<void (JSC::CurrentThreadState&)> const&) () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0
#26 0x00007fa3c4e42f55 in JSC::Heap::collectInMutatorThread() () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0
#27 0x00007fa3c4e43138 in JSC::Heap::stopIfNecessarySlow() () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0
#28 0x00007fa3c4e438d5 in JSC::Heap::collectIfNecessaryOrDefer(JSC::GCDeferralContext*) [clone .part.0] () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0
#29 0x00007fa3c5558baf in JSC::Structure::materializePropertyTable(JSC::VM&, bool) () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0
#30 0x00007fa3c50c4da6 in JSC::LLInt::performLLIntGetByID(JSC::BytecodeIndex, JSC::CodeBlock*, JSC::JSGlobalObject*, JSC::JSValue, JSC::Identifier const&, JSC::GetByIdModeMetadata&) () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0
#31 0x00007fa3c50c6346 in llint_slow_path_get_by_id () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0
#32 0x00007fa3c4369747 in llint_op_get_by_id () at /app/webkit/WebKitBuild/Release/lib/libjavascriptcoregtk-4.1.so.0
#33 0x0000000000000000 in  ()
Comment 1 Philippe Normand 2023-04-02 09:45:33 PDT
Pull request: https://github.com/WebKit/WebKit/pull/12295
Comment 2 EWS 2023-04-03 00:54:13 PDT
Committed 262500@main (08d1bd527b97): <https://commits.webkit.org/262500@main>

Reviewed commits have been landed. Closing PR #12295 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-04-03 00:55:16 PDT
<rdar://problem/107547142>