Cherry-pick 262500@main (08d1bd527b97). https://bugs.webkit.org/show_bug.cgi?id=254892

REGRESSION(259869@main): [GStreamer][WebCodecs] 2 tests now crashing
    https://bugs.webkit.org/show_bug.cgi?id=254892

    Reviewed by Žan Doberšek.

    Ensure the Cairo surface wrapped in the GstBuffer remains alive as long as the buffer, otherwise we
    might attempt to unref/destroy a surface that was previously unreffed elsewhere.

    * Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp:
    (WebCore::VideoFrame::fromNativeImage):

    Canonical link: https://commits.webkit.org/262500@main